--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-#Pyrogram==2.0.106
-git+https://github.com/KurimuzonAkuma/pyrogram
+Pyrogram
+#git+https://github.com/KurimuzonAkuma/pyrogram
 asyncio~=3.4.3
